# ConvertSave

./: .gitignore  CHANGELOG.md  ConvertSave.code-workspace  DEBUG_IMAGEMAGICK.md  NOTICE.md  README.md  TESTING.md  convertsave_all_documentation.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cursor/rules/: docs.mdc  readme.mdc
.github/: README.md  RELEASE.md  SIGNING.md
.github/workflows/: release-dev.yml  release.yml  test.yml
scripts/: README.md  retrigger-release.ps1  retrigger-release.sh  tauri-dev-clean.sh  tauri-dev.sh  update-version.ps1  update-version.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json  tauri.conf.json.pub
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/src/: conversion.rs  lib.rs  license.rs  main.rs
src-tauri/tests/: .gitignore  README.md  conversion_tests.rs  generate_fixtures.ps1  generate_fixtures.sh  integration_tests.rs  setup_fixtures.ps1  setup_fixtures.sh
src-tauri/tests/fixtures/audio/: sample.aac  sample.flac  sample.m4a
src-tauri/tests/fixtures/documents/: sample.html  sample.md  sample.rtf  sample.txt
src-tauri/tests/fixtures/images/: README.md  sample.pbm  sample.pcx  sample.pgm  sample.ppm  sample.tga  sample.tiff
src-tauri/tests/fixtures/video/: README.md  sample.avi  sample.mkv  sample.mov  sample.webm
src/components/: AdvancedSettings.tsx  BatchConversionSettings.tsx  ConversionOptions.tsx  CustomSelect.tsx  DropZone.tsx  FileConversionRow.tsx  LicenseActivation.tsx  ToolDownloader.tsx
src/lib/: converters.ts  licenses.ts  utils.ts
src/styles/: index.css
