[package]
name = "convertsave"
version = "0.1.5"
description = "A local file conversion utility"
authors = ["you"]
edition = "2021"

[lib]
name = "convertsave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
regex = "1"
# Pure Rust implementation to avoid native library dependencies
lzma-rs = "0.3"
sevenz-rust = "0.6"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
