[package]
name = "convertsave"
version = "0.6.0"
description = "A local file conversion utility"
authors = ["you"]
edition = "2021"

[[bin]]
name = "convertsave"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
regex = "1"
# Pure Rust implementation to avoid native library dependencies
lzma-rs = "0.3"
sevenz-rust = "0.6"
base64 = "0.22"
aes-gcm = "0.10"
scrypt = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enable Pandoc document conversion support (disabled by default)
# To enable: cargo build --features pandoc
pandoc = []
# Dev build with console window and debug tools
# To enable: cargo build --features dev-build
dev-build = []
